@@ -2,8 +2,6 @@ package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.hibernate.annotations.Fetch;
-import org.hibernate.annotations.FetchMode;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
@@ -18,12 +16,11 @@ import ru.practicum.shareit.comment.repository.CommentRepository;
 import ru.practicum.shareit.exception.AccessDeniedException;
 import ru.practicum.shareit.exception.IdNotFoundException;
 import ru.practicum.shareit.exception.MyValidationException;
-import ru.practicum.shareit.item.dto.ItemDto;
-import ru.practicum.shareit.item.dto.ItemDtoWithComments;
-import ru.practicum.shareit.item.dto.ItemMapper;
-import ru.practicum.shareit.item.dto.ItemMapperWithComments;
+import ru.practicum.shareit.item.dto.*;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
+import ru.practicum.shareit.request.model.ItemRequest;
+import ru.practicum.shareit.request.repository.ItemRequestRepository;
 import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.dto.UserMapper;
 import ru.practicum.shareit.user.model.User;
@@ -33,7 +30,7 @@ import javax.validation.Valid;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -42,6 +39,7 @@ import java.util.Optional;
 @Qualifier("dbService")
 @RequiredArgsConstructor
 public class ItemDbService implements ItemService {
+
     private final ItemRepository itemRepository;
     @Qualifier("dbService")
     private final UserService userService;
@@ -49,24 +47,27 @@ public class ItemDbService implements ItemService {
     private final ItemMapperWithComments itemMapperWithComments;
     private final CommentRepository commentRepository;
     private final BookingRepository bookingRepository;
+    private final ItemRequestRepository itemRequestRepository;
+    private final CommentMapper commentMapper;
 
     @Override
-    public List<ItemDtoWithComments> findAllByOwnerId(Integer ownerId, int from, int size) {
+    public List<ItemDtoWithComments> findByOwnerId(Integer ownerId, int from, int size) {
         PageRequest page = PageRequest.of(from > 0 ? from / size : 0, size);
 
         userService.findById(ownerId);
 
-        return itemMapperWithComments.mapListToItemDto(itemRepository
-                        .findByOwnerIdOrderById(ownerId, page).toList(),
-                ownerId);
+        return itemRepository.findByOwnerIdOrderById(ownerId, page).stream()
+                .map(i -> itemMapperWithComments.mapToItemDto(i,
+                        i.getOwner(), i.getItemRequest(), ownerId))
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Fetch(FetchMode.JOIN)
     public ItemDtoWithComments findByIdWithOwnerValidation(Integer id, Integer userId) {
         userService.findById(userId);
 
         Item item = itemRepository.findByIdFetch(id);
+
         if (item == null) {
             log.error("Item with ID {} has not been found", id);
             throw new IdNotFoundException("There is no Item with ID: " + id);
@@ -90,65 +91,71 @@ public class ItemDbService implements ItemService {
 
     @Transactional
     @Override
-    public ItemDto create(ItemDto itemDto, Integer ownerId) {
+    public ItemDto create(ItemDtoInput itemDtoInput, Integer ownerId) {
         User owner = UserMapper.mapToUser(userService.findById(ownerId));
+        ItemRequest itemRequest = null;
+
+        if (itemDtoInput.getRequestId() != null) {
+            itemRequest = itemRequestRepository.findById(itemDtoInput.getRequestId())
+                    .orElseThrow(() -> new IdNotFoundException("ItemRequest not found"));
+        }
 
         @Valid Item item = Item.builder()
-                .name(itemDto.getName())
-                .description(itemDto.getDescription())
-                .available(itemDto.getAvailable())
+                .name(itemDtoInput.getName())
+                .description(itemDtoInput.getDescription())
+                .available(itemDtoInput.getAvailable())
                 .owner(owner)
-                .itemRequest(null)
+                .itemRequest(itemRequest)
                 .build();
 
-        itemRepository.save(item);
         log.debug("Item has been created: {}", item);
-        return itemMapper.mapToItemDto(item);
+
+        return itemMapper.mapToItemDto(itemRepository.save(item));
     }
 
     @Transactional
     @Override
-    public ItemDto update(ItemDto itemDto, Integer ownerId, Integer itemId) {
+    public ItemDto update(ItemDtoInput itemDtoInput, Integer ownerId, Integer itemId) {
         User owner = UserMapper.mapToUser(userService.findById(ownerId));
-        Optional<Item> optionalExistedItem = itemRepository.findById(itemId);
 
-        if (optionalExistedItem.isEmpty()) {
-            log.error("User with ID {} has not been found", itemId);
-            throw new IdNotFoundException("There is no User with ID: " + itemId);
-        }
+        Item existedItem = itemRepository.findById(itemId)
+                .orElseThrow(() -> {
+                    log.error("Item with ID {} has not been found", itemId);
+                    return new IdNotFoundException("There is no Item with ID: " + itemId);
+                });
 
-        if (!optionalExistedItem.get().getOwner().getId().equals(ownerId)) {
+        if (!existedItem.getOwner().getId().equals(ownerId)) {
             log.error("Access denied for ownerId {}", ownerId);
             throw new AccessDeniedException("Access denied for ownerId " + ownerId);
         }
 
         Item item = Item.builder()
                 .id(itemId)
-                .name(itemDto.getName() != null ? itemDto.getName() : optionalExistedItem.get().getName())
-                .description(itemDto.getDescription() != null
-                        ? itemDto.getDescription() : optionalExistedItem.get().getDescription())
-                .available(itemDto.getAvailable() != null
-                        ? itemDto.getAvailable() : optionalExistedItem.get().getAvailable())
+                .name(itemDtoInput.getName() != null ? itemDtoInput.getName() : existedItem.getName())
+                .description(itemDtoInput.getDescription() != null
+                        ? itemDtoInput.getDescription() : existedItem.getDescription())
+                .available(itemDtoInput.getAvailable() != null
+                        ? itemDtoInput.getAvailable() : existedItem.getAvailable())
                 .owner(owner)
-                .itemRequest(optionalExistedItem.get().getItemRequest())
+                .itemRequest(existedItem.getItemRequest())
                 .build();
 
-        itemRepository.save(item);
+
         log.debug("ItemRequest has been updated: {}", item);
 
-        return itemMapper.mapToItemDto(item);
+        return itemMapper.mapToItemDto(itemRepository.save(item));
     }
 
     @Transactional
     @Override
     public CommentDto createComment(CommentDtoInput commentDtoInput, Integer itemId, Integer userId) {
         UserDto userDto = userService.findById(userId);
-        Optional<Item> optionalItem = itemRepository.findById(itemId);
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> {
+                    log.error("Item with ID {} is not exist", itemId);
+                    return new IdNotFoundException("There is no Item with ID: " + itemId);
+                });
 
-        if (optionalItem.isEmpty()) {
-            log.error("Item with ID {} is not exist", itemId);
-            throw new IdNotFoundException("There is not Item with ID " + itemId);
-        }
         if (bookingRepository.countByBookerIdAndItemIdAndStatusAndEndLessThan(
                 userId, itemId, BookingStatus.APPROVED, LocalDateTime.now()) == 0) {
             log.error("User with ID {} cannot comment Item with ID {}", userId, itemId);
@@ -156,21 +163,22 @@ public class ItemDbService implements ItemService {
                     " cannot comment Item with ID " + itemId);
         }
 
-        if (commentDtoInput.getCreated() == null) {
-            commentDtoInput.setCreated(LocalDateTime.now());
-        }
-
-        @Valid Comment comment = Comment.builder()
+        Comment comment = Comment.builder()
                 .text(commentDtoInput.getText())
-                .item(optionalItem.get())
+                .item(item)
                 .author(UserMapper.mapToUser(userDto))
                 .created(commentDtoInput.getCreated() == null ?
                         LocalDateTime.now() : commentDtoInput.getCreated())
                 .build();
 
-        commentRepository.save(comment);
         log.debug("Comment has been created: {}", comment);
 
-        return CommentMapper.mapToDto(comment);
+        return commentMapper.mapToDto(commentRepository.save(comment));
+    }
+
+    @Override
+    public List<ItemDto> findByItemRequestId(Integer itemRequestId) {
+
+        return itemMapper.mapListToItemDto(itemRepository.findByItemRequestId(itemRequestId));
     }
 }
